--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
     <h1>Hello, world!</h1>
     <p>My first web page.</p>
     <tr>
-    <td><a class="menu_list_02" href="001_06.html">“±“üŽ–—á</a></td>
+    <td><a class="menu_list_02" href="001_06.html">test</a></td>
     </tr>
 </body>
 </html>
