--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
     <title>SamplePage</title>
 </head>
 <body>
-    <h1>Hello, world!</h1>
+    <h1>Hello, world!!!!!!!!!!!!</h1>
     <p>My first web page.</p>
-    <tr>
-    <td><a href="http://www.alco-e.co.jp/">test</a></td>
-    </tr>
+    <a href="http://www.alco-e.co.jp/">test</a>
 </body>
 </html>
