--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <head>
     <title>SamplePage</title>
 </head>
-<body background="2017041710.png">
-    <h1>Hello, world!!!!!!!!!!!!</h1>
-    <p>My first web page.</p>
-    <a href="http://www.alco-e.co.jp/">test</a>
+<body background="test.jpg">
+    <h1>リンクページ</h1>
+    <p>このページはテスト用ウェブリンクページです。</p>
+    <a href="http://www.alco-e.co.jp/">監視画面へ</a>
+    <a href="http://www.alco-e.co.jp/">ウェブカメラ画面へ</a> 
+    <a href="http://www.alco-e.co.jp/">アナログ値表示画面へ</a>    
 </body>
 </html>
